# mcp-streamable-http-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.en.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
handler/: server.py  tool.py
handler/transport/: streamable_http.py  streamable_http_manager.py
middlewares/: __init__.py  authorize.py  demo.py
models/: session.py
server/: event.py  main.py  middleware.py
server/auth/: __init__.py  base.py  core.py  loader.py
server/middleware/: base.py  core.py  loader.py
server/service/: __init__.py  base.py  loader.py
server/tool/: __init__.py  base.py  loader.py  validator.py
server/transport/: streamable_http.py  streamable_http_manager.py  types.py
service/: database.py  example.py  session.py
strategies/: __init__.py  demo.py
tools/: __init__.py  demo.py  demo.yaml  notify.py  notify.yaml
